WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165254
Fix Efl build break without SVG_FONTS, XLST, SPELLCHECKER and PLUGINARCHITECTURE != x11.
https://bugs.webkit.org/show_bug.cgi?id=165254
Summary
Fix Efl build break without SVG_FONTS, XLST, SPELLCHECKER and PLUGINARCHITECT...
Gustavo Sverzut Barbieri
Reported
2016-12-01 09:01:09 PST
Fix Efl build break without SVG_FONTS, XLST, SPELLCHECKER and PLUGINARCHITECTURE != x11.
Attachments
Patch
(5.11 KB, patch)
2016-12-01 09:01 PST
,
Gustavo Sverzut Barbieri
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gustavo Sverzut Barbieri
Comment 1
2016-12-01 09:01:59 PST
Created
attachment 295853
[details]
Patch
Gustavo Sverzut Barbieri
Comment 2
2016-12-01 10:31:08 PST
win build failure is unrelated to this patch.
WebKit Commit Bot
Comment 3
2016-12-02 08:21:57 PST
Comment on
attachment 295853
[details]
Patch Clearing flags on attachment: 295853 Committed
r209235
: <
http://trac.webkit.org/changeset/209235
>
WebKit Commit Bot
Comment 4
2016-12-02 08:22:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug