Fix build break when disabling some features. https://bugs.webkit.org/show_bug.cgi?id=165254

Source/WebCore:

Patch by Gustavo Sverzut Barbieri <barbieri@profusion.mobi> on 2016-12-02
Reviewed by Michael Catanzaro.

If we disable SVG_FONTS or XSLT, then
WebCore::CachedResource::isCORSSameOrigin() would have assertions
on non-existent members. These should be isolated within "#if" as
the other places.

If we're in DEVELOPER_MODE but did not provide
TEST_HYPHENATAION_PATH, then we must mark UNUSED_PARAM() if we're
not on GTK port (ie: EFL).

No new tests as this is a build fix.

* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::isCORSSameOrigin):
 - missing #if ENABLED(SVG_FONTS)
 - missing #if ENABLED(XSLT)
* platform/text/hyphen/HyphenationLibHyphen.cpp:
(WebCore::scanTestDictionariesDirectoryIfNecessary):
 - missing UNUSED_PARAM()

Source/WebKit2:

The EFL port was broken if SPELLCHECK was disabled or
PLUGIN_ARCHITECTURE is not x11.

Patch by Gustavo Sverzut Barbieri <barbieri@profusion.mobi> on 2016-12-02
Reviewed by Michael Catanzaro.

* UIProcess/efl/TextCheckerEfl.cpp:
(WebKit::TextChecker::checkTextOfParagraph):
(WebKit::TextChecker::checkSpellingOfString):
Fix UNUSED_PARAM() usage if SPELLCHECK is disabled.
* UIProcess/efl/WebPageProxyEfl.cpp:
Isolate methods within #if PLUGIN_ARCHITECTURE(X11).

Canonical link: https://commits.webkit.org/182915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209235 268f45cc-cd09-0410-ab3c-d52691b4dbfc